force-app/main/default/objects/Employee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Company__c.Industry__c</field>
            <operation>equals</operation>
            <value>Tourism</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Employee List</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>