force-app/main/default/objects/Employee__c/fields/This_Year_DOB__c.field-meta.xml
<CustomField>
    <fullName>This_Year_DOB__c</fullName>
    <formula>DATE( YEAR(TODAY()) , MONTH(DOB__c) , DAY(DOB__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year DOB</label>
    <type>Date</type>
</CustomField>